<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#ffffff" android:clickable="true"
        android:layout_gravity="center">
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_edittext_register"
            android:paddingLeft="16dp"
            android:background="@drawable/rounded_edittext_register" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp" android:layout_marginTop="192dp" app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/username" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_edittext_register"
            android:paddingLeft="16dp"
            app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
            android:background="@drawable/rounded_edittext_register"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/email" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext_register"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_edittext_register"
            android:paddingLeft="16dp"
            app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
            android:background="@drawable/rounded_edittext_register"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/password" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_button_register"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_button"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" android:text="@string/register"/>
    <TextView
            android:text="@string/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a9a9a9"
            android:textSize="16sp"
            android:id="@+id/already_have_account_textView"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/register_button_register"
            app:layout_constraintEnd_toEndOf="@+id/register_button_register"
            app:layout_constraintHorizontal_bias="0.477"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>

    <TextView
            android:id="@+id/select_photo_button_register"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_select_photo"
            android:gravity="center"
            android:text="Select photo"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/select_photo_imageview_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/select_photo_button_register"
            app:layout_constraintEnd_toEndOf="@+id/select_photo_button_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/select_photo_button_register"
            app:layout_constraintTop_toTopOf="@+id/select_photo_button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>